syntax = "proto3";

option csharp_namespace = "PaymentService.gRPC";

package payment;

//Định nghĩa Dịch vụ gRPC cho PaymentService
service PaymentService {
  rpc CreatePayment (CreatePaymentRequest) returns (PaymentResponse);
  rpc UpdatePaymentStatus (UpdatePaymentStatusRequest) returns (PaymentResponse);
  rpc ProcessPayment (ProcessPaymentRequest) returns (PaymentResponse);
  rpc MarkPaymentFailed (MarkPaymentFailedRequest) returns (PaymentResponse);
  rpc GetPaymentStatus (GetPaymentStatusRequest) returns (PaymentResponse);
}

// Request/Response messages
message CreatePaymentRequest {
  string orderId = 1;
  double amount = 2;
}

message PaymentResponse {
  bool success = 1;
  string paymentId = 2;
  string message = 3;
}

message UpdatePaymentStatusRequest {
  string paymentId = 1;
  string status = 2; // Pending, Processed, Failed, Refunded
}

message ProcessPaymentRequest {
  string paymentId = 1;
}

message MarkPaymentFailedRequest {
  string paymentId = 1;
}

message GetPaymentStatusRequest {
  string paymentId = 1;
}